0030959: OSD_Parallel_TBB: number of execution threads is strictly limited by the root scope

Do not limit number of available threads by number of items processed within the root scope due to possibility of spawning of an additional threads within the subscopes.